--- a/public/test.html
+++ b/public/test.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>电子游戏时间轴</title>
+  <title>时间轴</title>
   <!-- 引入所需样式和库 -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" rel="stylesheet" />
@@ -33,6 +33,7 @@
 </head>
 <body>
   <h2>电子游戏时间轴</h2>
+  <!-- 功能按钮 -->
   <button onclick="openFilterWindow('and')">🔍 过滤标准</button>
   <div id="timeline"></div>
 
@@ -59,7 +60,7 @@
 <script>
 const ENDPOINT = "https://script.google.com/macros/s/AKfycbxe-P-iT8Jv8xSNTqdYB7SMi4sy2pPl8lLZ2EWqaXsP-jz6nfsxdJ1a0lzNSGB-e_1U/exec";
 
-let allOptions = {}, activeFilters = {}, filterLogic = 'and';
+let allOptions = {}, activeFilters = {}, filterOptionsChoices, filterLogic = 'and';
 let originalItems = [], timeline = null;
 
 const attributeLabels = {
@@ -67,7 +68,9 @@ const attributeLabels = {
   Region: "地区",
   Platform: "平台类型",
   Company: "公司",
-  ConsolePlatform: "主机类型"
+  Status: "状态",
+  ConsolePlatform: "主机类型",
+  Contributor: "贡献者"  // 新增贡献者标签
 };
 
 // 打开过滤窗口
@@ -89,7 +92,7 @@ function updateFilterList() {
   div.innerHTML = '';
   for (const [key, values] of Object.entries(activeFilters)) {
     const d = document.createElement("div");
-    d.textContent = `${attributeLabels[key] || key}: ${values.join(', ')}`;
+    d.textContent = ${attributeLabels[key] || key}: ${values.join(', ')};
     const btn = document.createElement("button");
     btn.textContent = '❌';
     btn.onclick = () => { delete activeFilters[key]; updateFilterList(); updateTimelineByFilter(); };
@@ -98,13 +101,14 @@ function updateFilterList() {
   }
 }
 
-// 应用过滤逻辑
+// 应用“和”逻辑过滤
 function applyFilters() { filterLogic = 'and'; updateTimelineByFilter(); }
+
+// 应用“或”逻辑过滤
 function applyFiltersOr() { filterLogic = 'or'; updateTimelineByFilter(); }
 
 // 过滤操作
 function updateTimelineByFilter() {
-  if (!timeline) return;
   const filtered = originalItems.filter(item => {
     const pass = (filterLogic === 'and')
       ? Object.entries(activeFilters).every(([k, vals]) => vals.includes(String(item[k] ?? '')))
@@ -114,13 +118,13 @@ function updateTimelineByFilter() {
   timeline.setItems(filtered);
 }
 
-// 打开新增过滤标准窗口
+// 打开新增过滤标准的窗口
 function openAddFilter() {
   document.getElementById("add-filter-window").style.display = 'block';
   const attrSel = document.getElementById("filter-attribute");
   attrSel.innerHTML = '';
-  // 删除 Status 和 Contributor，只保留需要的
-  const attributes = ['EventType', 'Region', 'Platform', 'Company', 'ConsolePlatform'];
+  // 这里需要添加您所有的过滤属性
+  const attributes = ['EventType', 'Region', 'Platform', 'Company', 'Status', 'ConsolePlatform', 'Contributor'];
   attributes.forEach(key => {
     const o = document.createElement("option");
     o.value = key;
@@ -129,6 +133,7 @@ function openAddFilter() {
   });
   attrSel.onchange = () => {
     const key = attrSel.value;
+    // 获取对应的过滤选项
     const opts = getFilterOptionsForKey(key); 
     const sel = document.getElementById("filter-options");
     sel.innerHTML = '';
@@ -152,15 +157,14 @@ function confirmAddFilter() {
   document.getElementById("add-filter-window").style.display = 'none';
 }
 
-// 归一化处理
 function normalizeToArray(raw) {
   if (Array.isArray(raw)) return raw;
   if (typeof raw === 'string') return [raw];
   if (raw && typeof raw === 'object') {
     try { return Object.values(raw).flat().filter(Boolean); } catch (e) {
-      let out = [];
+      var out = [];
       Object.keys(raw).forEach(k => {
-        const v = raw[k];
+        var v = raw[k];
         if (Array.isArray(v)) out = out.concat(v);
         else if (v) out.push(v);
       });
@@ -170,16 +174,19 @@ function normalizeToArray(raw) {
   return [];
 }
 
-// 获取过滤选项
+// 根据选择的过滤属性，返回对应的候选数组（已归一）
 function getFilterOptionsForKey(key) {
   if (key === 'ConsolePlatform') {
-    if (Array.isArray(allOptions.ConsolePlatformFilter)) return allOptions.ConsolePlatformFilter;
-    if (allOptions.ConsolePlatform) return normalizeToArray(allOptions.ConsolePlatform);
+    if (Array.isArray(allOptions.ConsolePlatformFilter)) {
+      return allOptions.ConsolePlatformFilter;
+    }
+    if (allOptions.ConsolePlatform) {
+      return normalizeToArray(allOptions.ConsolePlatform);
+    }
   }
   return normalizeToArray(allOptions[key]);
 }
 
-// 拉取事件数据
 fetch(ENDPOINT)
   .then(res => res.json())
   .then(data => {
@@ -187,43 +194,88 @@ fetch(ENDPOINT)
       const contentText = event.content ?? event.Title ?? '(无标题)';
       const Start = event.Start ?? event.start ?? '';
       const End   = event.End   ?? event.end   ?? '';
-      const EventType       = event.EventType       ?? event.eventType       ?? '';
-      const Region          = event.Region          ?? event.region          ?? '';
-      const Platform        = event.Platform        ?? event.platform        ?? '';
-      const Company         = event.Company         ?? event.company         ?? '';
-      const ConsolePlatform = event.ConsolePlatform ?? event.consolePlatform ?? '';
-      const Description = event.Description ?? '';
+      const blob = (event.title ?? '').toString();
+
+      const pick = (label) => {
+        if (!blob) return '';
+        const m = new RegExp(label + '：([^\\n]+)').exec(blob);
+        return m ? m[1].trim() : '';
+      };
+
+      const EventType       = event.EventType       ?? event.eventType       ?? pick('事件类型');
+      const Region          = event.Region          ?? event.region          ?? pick('地区');
+      const Platform        = event.Platform        ?? event.platform        ?? pick('平台类型');
+      const Company         = event.Company         ?? event.company         ?? pick('公司');
+      const Status          = event.Status          ?? event.status          ?? pick('状态');
+      const ConsolePlatform = event.ConsolePlatform ?? event.consolePlatform ?? pick('主机类型');
+      const Contributor     = event.Contributor    ?? event.contributor     ?? '';  // 获取贡献者
+
+      let tooltipHtml;
+      if (blob) {
+        tooltipHtml = blob.replace(/\n/g, '<br>');
+      } else {
+        tooltipHtml = [
+          事件名称：${contentText},
+          事件类型：${EventType || ''},
+          时间：${Start || ''}${End ? ' ~ ' + End : ''},
+          状态：${Status || ''},
+          地区：${Region || ''},
+          平台类型：${Platform || ''},
+          主机类型：${ConsolePlatform || ''},
+          公司：${Company || ''},
+          贡献者：${Contributor || ''}  // 显示贡献者
+        ].join('<br>');
+      }
+
       return {
-        id: i + 1,
+        id: event.id || auto-${i + 1},
         content: contentText,
         start: Start,
         end: End || undefined,
-        EventType, Region, Platform, Company, ConsolePlatform,
-        Description
+        title: tooltipHtml,
+        EventType,
+        Region,
+        Platform,
+        Company,
+        Status,
+        ConsolePlatform,
+        Contributor
       };
     });
-    // 收集所有选项
-    allOptions = { EventType: [], Region: [], Platform: [], Company: [], ConsolePlatform: [] };
-    originalItems.forEach(ev => {
-      Object.keys(allOptions).forEach(k => {
-        const v = ev[k];
-        if (v && !allOptions[k].includes(v)) allOptions[k].push(v);
-      });
+
+    timeline = new vis.Timeline(document.getElementById("timeline"), originalItems, {
+      locale: "zh-cn",
+      editable: false,
+      margin: { item: 10, axis: 50 },
+      orientation: { axis: 'bottom', item: 'bottom' },
+      tooltip: { followMouse: true, overflowMethod: 'flip' },
+      verticalScroll: true,
+      zoomKey: "ctrlKey",
+      stack: true
     });
-    // 初始化 timeline
-    const container = document.getElementById('timeline');
-    const items = new vis.DataSet(originalItems);
-    const options = {
-      stack: false,
-      start: moment().subtract(10, 'years').toDate(),
-      end: moment().add(2, 'years').toDate(),
-      zoomable: true,
-      horizontalScroll: true,
-      tooltip: { followMouse: true }
+  });
+
+fetch(ENDPOINT + '?action=options')
+  .then(res => res.json())
+  .then(options => {
+    allOptions = options;
+    const fill = (id, list) => {
+      const select = document.getElementById(id);
+      select.innerHTML = '';
+      (list || []).forEach(opt => {
+        const o = document.createElement('option');
+        o.value = o.textContent = opt;
+        select.appendChild(o);
+      });
     };
-    timeline = new vis.Timeline(container, items, options);
-  })
-  .catch(err => console.error(err));
+    fill("eventType", options.EventType);
+    fill("region", options.Region);
+    fill("platform", options.Platform);
+    fill("company", options.Company);
+    fill("tag", options.Tag);
+    new Choices('#tag', { removeItemButton: true });
+  });
+
 </script>
 </body>
 </html>
